--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-- jekyll-remote-theme
-
+theme:jekyll-theme-hacker
 title: Notes
 author: M13X
 description: Storing notes
