--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 markdown: kramdown
-theme: jekyll-theme-hacker
+theme: jekyll-theme-midnight
 title: Notes
 author: M13X
 description: Storing notes
